Fix alignment issues

--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 body {
-    font-family: Roboto, 'Helvetica Neue', sans-serif;
+    font-family: 'Roboto', arial;
     margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.bg {
+    flex: 1;
+    display: flex;
 }
 
 .section {
@@ -15,7 +23,9 @@ body {
 
 .header, .footer {
     display: flex;
-    padding: 16px;
+    padding: 16px 32px;
+    width: 1000px;
+    align-items: center;
 }
 
 .footer {
@@ -30,6 +40,8 @@ body {
 
 .logo {
     margin-right: auto;
+    display: flex;
+    align-items: center;
 }
 
 ul {
@@ -44,20 +56,26 @@ ul {
 
 .hero {
     display: flex;
-    padding: 64px 16px 80px 16px;
+    padding: 64px 32px 80px 32px;
     gap: 32px;
+    flex-wrap: wrap-reverse;
 }
 
 .img {
-    background-color:#4a4a4c;
     flex: 1;
+    background-color:#4a4a4c;
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 300px;
+    min-width: 400px;
 }
 
 .left-hero {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .main-text {
@@ -81,6 +99,15 @@ button {
     border-radius: 6px;
     padding: 6px 20px;
     margin: 24px 0 0 0;
+    width: max-content;
+    height: max-content;
+    flex: none;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .info-header-text {
@@ -146,21 +173,22 @@ button {
 }
 
 .cta-container {
-    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 150px 75px;
+    width: 1000px;
 }
 
 .cta {
+    flex: 1;
     background-color: #3882f6;
-    width: 1000px;
-    margin: 0 auto;
     border-radius: 6px;
     padding: 48px 100px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    gap: 12px;
 }
 
 .cta button {
@@ -168,5 +196,4 @@ button {
     border-width: 2px;
     border-color: #f9faf8;
     margin: 12px 0;
-    flex: none;
 }
